Fix for Bug 404143 - Fix JDK 1.6 issue with jaxb-compiler.sh(cmd) script
Code reviewed by:  Rick Barkhouse

Fix Details:
Added the "java.endorsed.dirs" property to point at the JAXB 2.2 jars shipped by MOXy.